Monitor specifications fixes

--- a/dotconfig/polybar/config.ini
+++ b/dotconfig/polybar/config.ini
@@ -58,7 +58,7 @@ enable-ipc = true
 
 [bar/main]
 inherit = bar/base
-monitor = eDP-1
+monitor = eDP-1-1
 
 modules-left = calendar weather tray
 modules-center = workspaces
@@ -66,7 +66,7 @@ modules-right = volume brightness sep bluetooth wifi sep battery
 
 [bar/secondary]
 inherit = bar/base
-monitor = HDMI-1-0
+monitor = HDMI-0
 
 modules-left = time
 modules-center = workspaces
