--- a/dotconfig/i3/config
+++ b/dotconfig/i3/config
@@ -65,7 +65,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # xrandr monitor output
-exec_always --no-startup-id xrandr --output HDMI-1-0 --mode 1440x900 --rate 60 --left-of eDP-1 --rotate left
+exec_always --no-startup-id xrandr --output HDMI-0 --mode 1440x900 --rate 60 --left-of eDP-1-1 --rotate left
 
 # nitrogen wallpaper
 exec --no-startup-id nitrogen --restore
